// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TaskTile should match the snapshot for grouped task 1`] = `
<DocumentFragment>
  <div
    class="tile-parent-container"
  >
    <div
      class="tile"
      style="background-color: rgb(237, 248, 230);"
    >
      <div
        class="tile-content"
      >
        <div
          class="tile-title"
        >
          <div>
            <test-file-stub />
          </div>
          <div
            class="drug-title"
            style="color: rgb(169, 169, 169);"
          />
        </div>
        <div
          class="tile-content-subtext"
          style="color: rgb(169, 169, 169);"
        >
          <span />
          <span>
             - 
          </span>
        </div>
        <div
          class="tile-content-subtext"
        >
          <test-file-stub />
          <div>
             
          </div>
        </div>
        <div
          class="more-info"
        >
          (1 more)
        </div>
      </div>
    </div>
    <div
      class="tile tile-2"
      style="background-color: rgb(237, 248, 230);"
    />
  </div>
</DocumentFragment>
`;

exports[`TaskTile should match the snapshot for non grouped task 1`] = `
<DocumentFragment>
  <div
    class="tile-parent-container"
  >
    <div
      class="tile"
      style="background-color: rgb(237, 248, 230);"
    >
      <div
        class="tile-content"
      >
        <div
          class="tile-title"
        >
          <div>
            <test-file-stub />
          </div>
          <div
            class="drug-title"
            style="color: rgb(169, 169, 169);"
          />
        </div>
        <div
          class="tile-content-subtext"
          style="color: rgb(169, 169, 169);"
        >
          <span />
          <span>
             - 
          </span>
        </div>
        <div
          class="tile-content-subtext"
        >
          <test-file-stub />
          <div>
             
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
